Ajustes a la creacion de BOBHTMl constructor de htmle tabla

--- a/bobSeller/WebContent/WEB-INF/views/index.html
+++ b/bobSeller/WebContent/WEB-INF/views/index.html
@@ -5,7 +5,7 @@
 	<meta charset="ISO-8859-1">
 	<title>BOB SELLER</title>
 
-<!--  	<script type="text/javascript" th:src="@{/js/test.js}" ></script>  -->
+	<script type="text/javascript" th:src="@{/js/Admin.js}" ></script>
 	<link rel="stylesheet" th:href="@{/css/global.css}"/> 
 </head>
 <body>
