--- a/bobSeller/WebContent/WEB-INF/views/admin.html
+++ b/bobSeller/WebContent/WEB-INF/views/admin.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="ISO-8859-1">
-<!--  	<script type="text/javascript" th:src="@{/js/test.js}" ></script>  -->
+	<script type="text/javascript" th:src="@{/js/Admin.js}" ></script>
 	<link rel="stylesheet" th:href="@{/css/global-admin.css}"/> 
 </head>
 <body>
