--- a/bobSeller/WebContent/WEB-INF/views/css/global-admin.css
+++ b/bobSeller/WebContent/WEB-INF/views/css/global-admin.css
@@ -6,6 +6,7 @@ body{
     font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 15px;
     line-height: 1.43;
+    overflow: hidden;
 }
 
 .error{
@@ -19,6 +20,35 @@ body{
 .error:before{
     content: "Ups!, ";
 }
+
+
+.BobTablaList{
+	position: relative;
+    width: 100%;
+    float: left;
+    overflow-x: scroll;
+    border: 1px solid #ccc;
+    padding: 0: border-radius:3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
+
+.BobTablaList > table > tbody > tr > th > input{
+    margin: 0px;
+    width: 70%;
+    padding: 3px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    margin: 0px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.06) inset;
+}
+
+.WrapperTablaList{
+	padding: 0px 30px;
+}
+
 .nav-menu-separator{
 	display: block;
     float: left;
