--- a/bobSeller/WebContent/WEB-INF/views/css/global-admin.css
+++ b/bobSeller/WebContent/WEB-INF/views/css/global-admin.css
@@ -30,7 +30,8 @@ body{
 	position: relative;
     width: 100%;
     float: left;
-    overflow-x: scroll;
+    overflow-x: visible;
+    overflow-y: visible;
     border: 1px solid #ccc;
     padding: 0: border-radius:3px;
     -moz-border-radius: 3px;
@@ -100,6 +101,30 @@ body{
     background-image: -o-linear-gradient(top, #1C1C1C, #414040);
 }
 
+.rollover:hover > div{
+	display: inline !important;
+    padding: 4px 8px;
+    color: #FFF;
+    position: absolute;
+    float: left;
+    width: 20%;
+    margin-left: 25px;
+    text-align: left;
+    z-index: 1;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow: 0px 0px 4px #222;
+    -webkit-box-shadow: 0px 0px 4px #222;
+    box-shadow: 0px 0px 4px #222;
+    background-image: -moz-linear-gradient(top, #1C1C1C, #414040);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #1C1C1C),color-stop(1, #414040));
+    background-image: -webkit-linear-gradient(top, #1C1C1C, #414040);
+    background-image: -moz-linear-gradient(top, #1C1C1C, #414040);
+    background-image: -ms-linear-gradient(top, #1C1C1C, #414040);
+    background-image: -o-linear-gradient(top, #1C1C1C, #414040);
+}
+
 .TituloTabla{
 	background-color: #F8F8F8;
     border: 1px solid #CCCCCC;
@@ -116,6 +141,20 @@ body{
     z-index: -1;
 }
 
+.LabelTitulo{
+	position: relative;
+    font-size: 133%;
+    color: #504f4e;
+    font-weight: 700;
+    padding: 15px;
+    float: left;
+    width: 31%;
+    margin-top: 4px;
+}
+.tableImg{
+    width: 100%;
+    padding-top: 5px;	
+}
 .centrar{text-align: center;}
 .izquierda{text-align: left;}
 .derecha{text-align: right;}
@@ -141,6 +180,7 @@ body{
     margin-bottom: 0;
     font-weight: 400;
     text-align: center;
+    text-decoration: inherit;
     vertical-align: middle;
     touch-action: manipulation;
     cursor: pointer;
@@ -224,6 +264,7 @@ ul#menuAdmin ul {
     color: #fff;
     padding: 0px 2px;
     margin: 0;
+    z-index: 5;
  }
   
 ul#menuAdmin ul li{
